--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@
     --secondary-color: #F05454;
     --font: "Nunito Sans", sans-serif;
 }
+
+body {
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+    font-family: var(--font);
+}
+
