--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     background-color: var(--bg-color);
     color: var(--primary-color);
     font-family: var(--font);
+    height: 100vh;
+    margin: 0;
 }
 
 header {
@@ -19,7 +21,7 @@ header {
     padding: 1px;
 }
 
-h1{
+h1 {
     font-size: 2rem;
     color: var(--bg-color);
     font-weight: 700;
@@ -38,3 +40,39 @@ nav a {
     font-size: 1.2rem;
 }
 
+nav a:hover {
+    text-decoration: underline;
+    transform: scale(0.90);
+    transition: transform 0.1s;
+}
+
+.graficos-container {
+    margin: 5rem;
+}
+
+.grafico {
+    margin-top: 3rem;
+}
+
+.graficos-container__texto {
+    font-size: 1.3rem;
+    text-align: center;
+    padding: 2rem;
+    border: var(--secondary-color) solid 2px;
+}
+
+span {
+    font-weight: bold;
+    color: var(--secondary-color);
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color);
+    color: var(--bg-color);
+    width: 100%;
+    height: 3rem;
+    margin-top: 2rem;
+}
